--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -22,12 +22,26 @@
                     <div class="d-flex justify-content-between w-100">
                         <div class="d-flex align-items-center">
                             {% if request.user.is_company %}
+                                
                                 <a class="nav-link" href="{% url 'create_vacancy' %}">Создать вакансию</a>
                                 <a class="nav-link" href="{% url 'list_summary' %}">Список резюме</a>
+
+                                {% if request.user.responses_employer.all %}
+                                    
+                                    <a class="nav-link" href="{% url 'list_response' %}">Список откликов</a>
+                                
+                                {% endif %}
+                                
                             {% else %}
 
                                 <a class="nav-link" href="{% url 'create_summary' %}">Создать резюме</a>
                                 <a class="nav-link" href="{% url 'list_vacancy' %}">Список вакансий</a>
+
+                                {% if request.user.responses_applicant.all %}
+                                    
+                                    <a class="nav-link" href="{% url 'list_response' %}">Список откликов</a>
+                                
+                                {% endif %}
 
                             {% endif %}
                         </div>
